--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p>Если любое из трех шестнадцатеричных значений отличается от 00, 33, 66, 99, СС или FF, то цвет не является безопасным.</p>
 	<p>Пример: HEX = (99, FF, 10)</p>
 	<p>Безопасная палитра цветов обеспечивает наиболее точное соответствие отображения на различных мониторах того, что изначально было задумано веб-дизайнером.</p>
-	<p>На сегодняшний день использование безопасных цветов не актуально, так как современные устройства обеспечивают точную передачу любого цвета.</p>
+	<p style="font-style: italic; color: blue;">На сегодняшний день использование безопасных цветов не актуально, так как современные устройства обеспечивают точную передачу любого цвета.</p>
 
 </body>
 </html>
